@@ -17,11 +17,13 @@
 package org.apache.pdfbox.debugger;
 
 import java.awt.BorderLayout;
+import java.awt.Color;
 import java.awt.Component;
 import java.awt.Cursor;
 import java.awt.Dimension;
 import java.awt.FileDialog;
 import java.awt.Frame;
+import java.awt.Rectangle;
 import java.awt.Toolkit;
 import java.awt.datatransfer.DataFlavor;
 import java.awt.datatransfer.Transferable;
@@ -32,13 +34,17 @@ import java.awt.event.KeyEvent;
 import java.awt.event.WindowEvent;
 import java.awt.print.PrinterException;
 import java.awt.print.PrinterJob;
+import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.PrintStream;
 import java.lang.reflect.Method;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
+import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
@@ -54,7 +60,10 @@ import javax.print.attribute.PrintRequestAttributeSet;
 import javax.print.attribute.standard.Sides;
 import javax.swing.AbstractAction;
 import javax.swing.Action;
+import javax.swing.Box;
 import javax.swing.JComponent;
+import javax.swing.JDialog;
+import javax.swing.JEditorPane;
 import javax.swing.JFrame;
 import javax.swing.JLabel;
 import javax.swing.JMenu;
@@ -68,6 +77,8 @@ import javax.swing.KeyStroke;
 import javax.swing.TransferHandler;
 import javax.swing.UIManager;
 import javax.swing.border.BevelBorder;
+import javax.swing.event.HyperlinkEvent;
+import javax.swing.event.HyperlinkListener;
 import javax.swing.event.TreeSelectionEvent;
 import javax.swing.filechooser.FileFilter;
 import javax.swing.filechooser.FileNameExtensionFilter;
@@ -124,7 +135,6 @@ import org.apache.pdfbox.debugger.ui.XrefEntries;
 import org.apache.pdfbox.debugger.ui.XrefEntry;
 import org.apache.pdfbox.debugger.ui.ZoomMenu;
 import org.apache.pdfbox.filter.FilterFactory;
-import org.apache.pdfbox.io.IOUtils;
 import org.apache.pdfbox.io.RandomAccessReadBuffer;
 import org.apache.pdfbox.pdmodel.PDDocument;
 import org.apache.pdfbox.pdmodel.common.PDPageLabels;
@@ -152,7 +162,7 @@ import picocli.CommandLine.Model.CommandSpec;
  */
 @SuppressWarnings({ "serial", "squid:MaximumInheritanceDepth", "squid:S1948" })
 @Command(name = "pdfdebugger", description = "Analyzes and inspects the internal structure of a PDF document")
-public class PDFDebugger extends JFrame implements Callable<Integer>
+public class PDFDebugger extends JFrame implements Callable<Integer>, HyperlinkListener
 {
     private static Log LOG; // needs late initialization
 
@@ -193,7 +203,7 @@ public class PDFDebugger extends JFrame implements Callable<Integer>
     private JMenuItem findPreviousMenuItem;
 
     // current view mode of the tree
-    private String treeViewMode = TreeViewMenu.VIEW_PAGES;
+    private String currentTreeViewMode = TreeViewMenu.VIEW_PAGES;
 
     // cli options
     // Expected for CLI app to write to System.out/System.err
@@ -224,7 +234,7 @@ public class PDFDebugger extends JFrame implements Callable<Integer>
     {
         if (viewstructure)
         {
-            treeViewMode = TreeViewMenu.VIEW_STRUCTURE;
+            currentTreeViewMode = TreeViewMenu.VIEW_STRUCTURE;
         }
     }
 
@@ -238,7 +248,7 @@ public class PDFDebugger extends JFrame implements Callable<Integer>
     {
         if (TreeViewMenu.isValidViewMode(initialViewMode))
         {
-            treeViewMode = initialViewMode;
+            currentTreeViewMode = initialViewMode;
         }
         else
         {
@@ -267,7 +277,7 @@ public class PDFDebugger extends JFrame implements Callable<Integer>
         {
             // can't be initialized earlier because it's an awt call which would fail when
             // PDFBox.main runs on a headless system
-            shortcutKeyMask = Toolkit.getDefaultToolkit().getMenuShortcutKeyMask();
+            shortcutKeyMask = Toolkit.getDefaultToolkit().getMenuShortcutKeyMaskEx();
 
             UIManager.setLookAndFeel(UIManager.getSystemLookAndFeelClassName());
             if (System.getProperty("apple.laf.useScreenMenuBar") == null)
@@ -319,7 +329,7 @@ public class PDFDebugger extends JFrame implements Callable<Integer>
      */
     public String getTreeViewMode()
     {
-        return treeViewMode;
+        return currentTreeViewMode;
     }
 
     /**
@@ -332,7 +342,7 @@ public class PDFDebugger extends JFrame implements Callable<Integer>
     {
         if (TreeViewMenu.isValidViewMode(viewMode))
         {
-            treeViewMode = viewMode;
+            currentTreeViewMode = viewMode;
         }
     }
 
@@ -437,6 +447,18 @@ public class PDFDebugger extends JFrame implements Callable<Integer>
         menuBar.add(viewMenu.getMenu());
         setJMenuBar(menuBar);
 
+        menuBar.add(Box.createHorizontalGlue());
+        JMenu help = new JMenu("Help");
+        help.setMnemonic(KeyEvent.VK_H);
+
+        JMenuItem item = new JMenuItem("About PDFBox", KeyEvent.VK_A);
+        item.setActionCommand("about");
+        item.addActionListener(actionEvent ->
+                textDialog("About Apache PDFBox", PDFDebugger.class.getResource("about.html")));
+        help.add(item);
+
+        menuBar.add(help);
+
         setExtendedState(windowPrefs.getExtendedState());
         setBounds(windowPrefs.getBounds());
 
@@ -528,7 +550,7 @@ public class PDFDebugger extends JFrame implements Callable<Integer>
             {
                 readPDFurl(urlString, "");
             }
-            catch (IOException e)
+            catch (IOException | URISyntaxException e)
             {
                 throw new RuntimeException(e);
             }
@@ -550,7 +572,7 @@ public class PDFDebugger extends JFrame implements Callable<Integer>
                     readPDFFile(currentFilePath, "");
                 }
             }
-            catch (IOException e)
+            catch (IOException | URISyntaxException e)
             {
                 new ErrorDialog(e).setVisible(true);
             }
@@ -707,7 +729,7 @@ public class PDFDebugger extends JFrame implements Callable<Integer>
         {
             readPDFFile(filename, "");
         }
-        catch (IOException e)
+        catch (IOException | URISyntaxException e)
         {
             new ErrorDialog(e).setVisible(true);
         }
@@ -774,7 +796,7 @@ public class PDFDebugger extends JFrame implements Callable<Integer>
                 }
             }
         }
-        catch (IOException e)
+        catch (IOException | URISyntaxException e)
         {
             new ErrorDialog(e).setVisible(true);
         }
@@ -1206,7 +1228,7 @@ public class PDFDebugger extends JFrame implements Callable<Integer>
                 COSStream stream = (COSStream) selectedNode;
                 try (InputStream in = stream.createInputStream())
                 {
-                    return new String(IOUtils.toByteArray(in));
+                    return new String(in.readAllBytes());
                 }
             }
             catch( IOException e )
@@ -1333,13 +1355,13 @@ public class PDFDebugger extends JFrame implements Callable<Integer>
         }
     }
 
-    private void readPDFFile(String filePath, String password) throws IOException
+    private void readPDFFile(String filePath, String password) throws IOException, URISyntaxException
     {
         File file = new File(filePath);
         readPDFFile(file, password);
     }
     
-    private void readPDFFile(final File file, String password) throws IOException
+    private void readPDFFile(final File file, String password) throws IOException, URISyntaxException
     {
         if( document != null )
         {
@@ -1386,8 +1408,9 @@ public class PDFDebugger extends JFrame implements Callable<Integer>
         }
         addRecentFileItems();
     }
-    
-    private void readPDFurl(final String urlString, String password) throws IOException
+
+    private void readPDFurl(final String urlString, String password)
+            throws IOException, URISyntaxException
     {
         if (document != null)
         {
@@ -1404,11 +1427,11 @@ public class PDFDebugger extends JFrame implements Callable<Integer>
         DocumentOpener documentOpener = new DocumentOpener(password)
         {
             @Override
-            PDDocument open() throws IOException
+            PDDocument open() throws IOException, URISyntaxException
             {
                 long t0 = System.nanoTime();
                 PDDocument doc = Loader.loadPDF(RandomAccessReadBuffer
-                        .createBufferFromStream(new URL(urlString).openStream()), password);
+                        .createBufferFromStream(new URI(urlString).toURL().openStream()), password);
                 long t1 = System.nanoTime();
                 long ms = TimeUnit.MILLISECONDS.convert(t1 - t0, TimeUnit.NANOSECONDS);
                 LOG.info("Parsed in " + ms + " ms");
@@ -1417,6 +1440,7 @@ public class PDFDebugger extends JFrame implements Callable<Integer>
         };
         document = documentOpener.parse();
         printMenuItem.setEnabled(true);
+        printDpiMenu.setEnabled(true);
         reopenMenuItem.setEnabled(true);
         saveAsMenuItem.setEnabled(true);
 
@@ -1432,7 +1456,7 @@ public class PDFDebugger extends JFrame implements Callable<Integer>
         }
         addRecentFileItems();
     }
-    
+
     public void initTree()
     {
         TreeStatus treeStatus = new TreeStatus(document.getDocument().getTrailer());
@@ -1483,8 +1507,9 @@ public class PDFDebugger extends JFrame implements Callable<Integer>
          * 
          * @return the PDDocument instance
          * @throws IOException Cannot read document
+         * @throws URISyntaxException
          */
-        abstract PDDocument open() throws IOException;
+        abstract PDDocument open() throws IOException, URISyntaxException;
 
         /**
          * Call this!
@@ -1492,7 +1517,7 @@ public class PDFDebugger extends JFrame implements Callable<Integer>
          * @return the PDDocument instance
          * @throws IOException Cannot read document
          */
-        final PDDocument parse() throws IOException 
+        final PDDocument parse() throws IOException, URISyntaxException 
         {
             while (true)
             {
@@ -1588,5 +1613,78 @@ public class PDFDebugger extends JFrame implements Callable<Integer>
             }
         }
         return null;
+    }
+
+    private void textDialog(String title, URL resource)
+    {
+        try
+        {
+            JDialog dialog = new JDialog(this, title, true);
+            JEditorPane editor = new JEditorPane(resource);
+            editor.setContentType("text/html");
+            editor.setEditable(false);
+            editor.setBackground(Color.WHITE);
+            editor.setPreferredSize(new Dimension(400, 250));
+
+            // put it in the middle of the parent, but not outside of the screen
+            // GraphicsEnvironment.getLocalGraphicsEnvironment().getDefaultScreenDevice()
+            // doesn't work give the numbers we need
+            Dimension screenSize = Toolkit.getDefaultToolkit().getScreenSize();
+            double screenWidth = screenSize.getWidth();
+            double screenHeight = screenSize.getHeight();
+            Rectangle parentBounds = this.getBounds();
+            editor.addHyperlinkListener(this);
+            dialog.add(editor);
+            dialog.pack();
+
+            int x = (int) (parentBounds.getX() + (parentBounds.getWidth() - editor.getWidth()) / 2);
+            int y = (int) (parentBounds.getY() + (parentBounds.getHeight() - editor.getHeight()) / 2);
+            x = (int) Math.min(x, screenWidth * 3 / 4);
+            y = (int) Math.min(y, screenHeight * 3 / 4);
+            x = Math.max(0, x);
+            y = Math.max(0, y);
+            dialog.setLocation(x, y);
+
+            dialog.setVisible(true);
+        }
+        catch (IOException ex)
+        {
+            new ErrorDialog(ex).setVisible(true);
+        }
+    }
+    
+    @Override
+    public void hyperlinkUpdate(HyperlinkEvent he)
+    {
+        if (he.getEventType() == HyperlinkEvent.EventType.ACTIVATED)
+        {
+            try
+            {
+                URL url = he.getURL();
+                try (InputStream stream = url.openStream())
+                {
+                    ByteArrayOutputStream baos = new ByteArrayOutputStream();
+                    stream.transferTo(baos);
+                    JEditorPane editor
+                            = new JEditorPane("text/plain", baos.toString(StandardCharsets.UTF_8));
+                    editor.setEditable(false);
+                    editor.setBackground(Color.WHITE);
+                    editor.setCaretPosition(0);
+                    editor.setPreferredSize(new Dimension(600, 400));
+
+                    String name = url.toString();
+                    name = name.substring(name.lastIndexOf('/') + 1);
+
+                    JDialog dialog = new JDialog(this, "Apache PDFBox: " + name);
+                    dialog.add(new JScrollPane(editor));
+                    dialog.pack();
+                    dialog.setVisible(true);
+                }
+            }
+            catch (IOException ex)
+            {
+                new ErrorDialog(ex).setVisible(true);
+            }
+        }
     }
 }
